feat(levels): add conveyorBelt, chapters and level catalogs